2004-11-01 Scott Dattalo <scott@dattalo.com>
	* src/gpsim_time.cc, src/gpsim_time.h, src/breakpoints.cc, src/ioports.h, 
	src/ioports.cc, src/stimuli.cc, src/tmr0.cc: Interrupts, tmr0 and
	I/O pins were all broken in some way.
	* regression/interrupts_14bit.asm, regression/interrupts_14bit.stc:
	Added regression test for the midrange devices

2004-10-29 Scott Dattalo <scott@dattalo.com>
	* src/gpsim_time.cc, src/gpsim_time.h: Cycle counter debugging.
	
2004-10-20 Scott Dattalo <scott@dattalo.com>
	* src/16bit-instructions.cc: Fixed bug in DECF instruction.
	* regression/instructions_16bit/instructions_16bit.asm: Added
	decf instruction to the regression test.
	
2004-10-20 Scott Dattalo <scott@dattalo.com>
	* src/ioports.cc, src/ioports.h, src/stimuli.cc, src/stimuli.h:
	PORTB pullups updated. 
	Added an overloaded update() member to Stimulus_Node that doesn't
	require time as an input (we never used it anyway).
	
2004-10-19 Scott Dattalo <scott@dattalo.com>
	* src/stimuli.h, src/stimuli.cc, src/ioports.cc, src/i2c-ee.cc:
	Optimized I/O port stimulus updates.

2004-10-19 Scott Dattalo <scott@dattalo.com>
	* src/stimuli.h, src/stimuli.cc: Began adding capitance modelling
	to stimuli.

2004-10-18 Scott Dattalo <scott@dattalo.com>
	* src/gpsim_classes.h, src/registers.h: Added EXTERNAL_RESET and
	BOD_RESET types.
	
2004-10-17 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.def: MSVC sync
	* src/symbol.cc: fixed gpsim crash on WIN32 in remove_module()

2004-10-13 Scott Dattalo <scott@dattalo.com>
	* src/cod.cc: Applied patch from Craig Franklin that adds support
	for reading .cod file message area.

2004-10-12 Scott Dattalo <scott@dattalo.com>
	* src/gpsim_time.cc: Added diagnostic printf's
	* src/pic-processor.cc, src/pic-processor.h, src/processor.cc,
	src/processor.h: add an option to not update the gui while single
	stepping.

2004-10-11 Scott Dattalo <scott@dattalo.com>
	* src/cod.cc, src/processor.cc: Applied, but modified, patch from