@@ -1,4 +1,8 @@
 2004-11-01 Scott Dattalo <scott@dattalo.com>
+	* src/gpsim_time.cc, src/gpsim_time.h: Fixed a bug with clearing
+	cycle counter break points.
+	
+2004-11-01 Scott Dattalo <scott@dattalo.com>
 	* src/gpsim_time.cc, src/gpsim_time.h, src/breakpoints.cc, src/ioports.h, 
 	src/ioports.cc, src/stimuli.cc, src/tmr0.cc: Interrupts, tmr0 and
 	I/O pins were all broken in some way.
